@@ -20,37 +20,30 @@
 package org.sonarlint.eclipse.ui.internal.command;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashMap;
 import java.util.LinkedHashMap;
+import java.util.List;
 import java.util.Map;
-import java.util.Map.Entry;
 import org.eclipse.core.commands.AbstractHandler;
 import org.eclipse.core.commands.ExecutionEvent;
 import org.eclipse.core.commands.ExecutionException;
-import org.eclipse.core.resources.IFile;
 import org.eclipse.jdt.annotation.Nullable;
 import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.dialogs.MessageDialogWithToggle;
-import org.eclipse.jface.text.IDocument;
-import org.eclipse.jface.viewers.ISelection;
 import org.eclipse.jface.viewers.IStructuredSelection;
 import org.eclipse.swt.SWT;
 import org.eclipse.swt.widgets.Shell;
-import org.eclipse.ui.IEditorInput;
-import org.eclipse.ui.IEditorPart;
 import org.eclipse.ui.IFileEditorInput;
 import org.eclipse.ui.handlers.HandlerUtil;
 import org.eclipse.ui.texteditor.ITextEditor;
 import org.sonarlint.eclipse.core.internal.TriggerType;
 import org.sonarlint.eclipse.core.internal.adapter.Adapters;
 import org.sonarlint.eclipse.core.internal.jobs.AbstractAnalyzeProjectJob;
-import org.sonarlint.eclipse.core.internal.jobs.AbstractSonarProjectJob;
 import org.sonarlint.eclipse.core.internal.jobs.AnalyzeProjectRequest;
 import org.sonarlint.eclipse.core.internal.jobs.AnalyzeProjectRequest.FileWithDocument;
-import org.sonarlint.eclipse.core.internal.preferences.SonarLintGlobalConfiguration;
 import org.sonarlint.eclipse.core.internal.jobs.AnalyzeProjectsJob;
+import org.sonarlint.eclipse.core.internal.preferences.SonarLintGlobalConfiguration;
 import org.sonarlint.eclipse.core.resource.ISonarLintFile;
 import org.sonarlint.eclipse.core.resource.ISonarLintProject;
 import org.sonarlint.eclipse.ui.internal.util.PlatformUtils;
@@ -61,15 +54,15 @@ public class AnalyzeCommand extends AbstractHandler {
   @Nullable
   @Override
   public Object execute(ExecutionEvent event) throws ExecutionException {
-    ISelection selection = HandlerUtil.getCurrentSelectionChecked(event);
+    var selection = HandlerUtil.getCurrentSelectionChecked(event);
     final Map<ISonarLintProject, Collection<FileWithDocument>> filesPerProject;
     if (selection instanceof IStructuredSelection) {
       filesPerProject = findSelectedFilesPerProject(event);
     } else {
       filesPerProject = new HashMap<>(1);
-      FileWithDocument editedFile = findEditedFile(event);
+      var editedFile = findEditedFile(event);
       if (editedFile != null) {
-        filesPerProject.put(editedFile.getFile().getProject(), Arrays.asList(editedFile));
+        filesPerProject.put(editedFile.getFile().getProject(), List.of(editedFile));
       }
     }
 
@@ -81,25 +74,25 @@ public class AnalyzeCommand extends AbstractHandler {
   }
 
   private static void runAnalysisJob(Shell shell, Map<ISonarLintProject, Collection<FileWithDocument>> filesPerProject) {
-    int totalFileCount = filesPerProject.values().stream().mapToInt(Collection::size).sum();
+    var totalFileCount = filesPerProject.values().stream().mapToInt(Collection::size).sum();
     if (totalFileCount > 1 && !askConfirmation(shell)) {
       return;
     }
     if (filesPerProject.size() == 1) {
-      Entry<ISonarLintProject, Collection<FileWithDocument>> entry = filesPerProject.entrySet().iterator().next();
-      AnalyzeProjectRequest req = new AnalyzeProjectRequest(entry.getKey(), entry.getValue(), TriggerType.MANUAL, true);
-      int fileCount = req.getFiles().size();
+      var entry = filesPerProject.entrySet().iterator().next();
+      var req = new AnalyzeProjectRequest(entry.getKey(), entry.getValue(), TriggerType.MANUAL, true);
+      var fileCount = req.getFiles().size();
       String reportTitle;
       if (fileCount == 1) {
         reportTitle = "File " + req.getFiles().iterator().next().getFile().getName();
       } else {
         reportTitle = fileCount + " files of project " + entry.getKey().getName();
       }
-      AbstractSonarProjectJob job = AbstractAnalyzeProjectJob.create(req);
+      var job = AbstractAnalyzeProjectJob.create(req);
       AnalyzeChangeSetCommand.registerJobListener(job, reportTitle);
       job.schedule();
     } else {
-      AnalyzeProjectsJob job = new AnalyzeProjectsJob(filesPerProject);
+      var job = new AnalyzeProjectsJob(filesPerProject);
       AnalyzeChangeSetCommand.registerJobListener(job, "All files of " + filesPerProject.size() + " projects");
       job.schedule();
     }
@@ -111,14 +104,14 @@ public class AnalyzeCommand extends AbstractHandler {
     }
 
     // Note: in oxygen and later another overload exists that allows setting custom button labels
-    MessageDialogWithToggle dialog = MessageDialogWithToggle.open(
+    var dialog = MessageDialogWithToggle.open(
       MessageDialog.CONFIRM, shell, "Confirmation",
       "Analyzing multiple files may take a long time to complete. "
         + "To get the best from SonarLint, you should preferably use the on-the-fly analysis for the files you're working on."
         + "\n\nWould you like to proceed?",
       "Always proceed without asking", false, null, null, SWT.NONE);
 
-    boolean proceed = dialog.getReturnCode() == 0;
+    var proceed = dialog.getReturnCode() == 0;
 
     if (proceed && dialog.getToggleState()) {
       SonarLintGlobalConfiguration.setSkipConfirmAnalyzeMultipleFiles();
@@ -128,12 +121,12 @@ public class AnalyzeCommand extends AbstractHandler {
   }
 
   protected Map<ISonarLintProject, Collection<FileWithDocument>> findSelectedFilesPerProject(ExecutionEvent event) throws ExecutionException {
-    Map<ISonarLintProject, Collection<FileWithDocument>> filesToAnalyzePerProject = new LinkedHashMap<>();
-    for (ISonarLintFile file : SelectionUtils.allSelectedFiles(HandlerUtil.getCurrentSelectionChecked(event), true)) {
-      filesToAnalyzePerProject.putIfAbsent(file.getProject(), new ArrayList<FileWithDocument>());
-      IEditorPart editorPart = PlatformUtils.findEditor(file);
+    var filesToAnalyzePerProject = new LinkedHashMap<ISonarLintProject, Collection<FileWithDocument>>();
+    for (var file : SelectionUtils.allSelectedFiles(HandlerUtil.getCurrentSelectionChecked(event), true)) {
+      filesToAnalyzePerProject.putIfAbsent(file.getProject(), new ArrayList<>());
+      var editorPart = PlatformUtils.findEditor(file);
       if (editorPart instanceof ITextEditor) {
-        IDocument doc = ((ITextEditor) editorPart).getDocumentProvider().getDocument(editorPart.getEditorInput());
+        var doc = ((ITextEditor) editorPart).getDocumentProvider().getDocument(editorPart.getEditorInput());
         filesToAnalyzePerProject.get(file.getProject()).add(new FileWithDocument(file, doc));
       } else {
         filesToAnalyzePerProject.get(file.getProject()).add(new FileWithDocument(file, null));
@@ -144,15 +137,15 @@ public class AnalyzeCommand extends AbstractHandler {
 
   @Nullable
   static FileWithDocument findEditedFile(ExecutionEvent event) {
-    IEditorPart activeEditor = HandlerUtil.getActiveEditor(event);
+    var activeEditor = HandlerUtil.getActiveEditor(event);
     if (activeEditor == null) {
       return null;
     }
-    IEditorInput input = activeEditor.getEditorInput();
+    var input = activeEditor.getEditorInput();
     if (input instanceof IFileEditorInput) {
-      IDocument doc = ((ITextEditor) activeEditor).getDocumentProvider().getDocument(activeEditor.getEditorInput());
-      IFile file = ((IFileEditorInput) input).getFile();
-      ISonarLintFile sonarLintFile = Adapters.adapt(file, ISonarLintFile.class);
+      var doc = ((ITextEditor) activeEditor).getDocumentProvider().getDocument(activeEditor.getEditorInput());
+      var file = ((IFileEditorInput) input).getFile();
+      var sonarLintFile = Adapters.adapt(file, ISonarLintFile.class);
       return sonarLintFile != null ? new FileWithDocument(sonarLintFile, doc) : null;
     }
     return null;
